tests/test2/fail/fail-subMatrix.m2
int main() {
  matrix float [3][2] m;
  m = [[2.1, 1.9];
      [0.3, 9.7];
      [1.12, 9.21]];

  m:subMatrix[9.2,0,0,0];

  return 0;
}